@@ -2,6 +2,7 @@ This file list changes done in each version of the CheckSum Tool.
 
 CheckSum Tool 0.4.0
   Add Select All to Edit-menu (also CTRL+A shortcut key)
+  Add Copy -item to Edit-menu (copies checksums to clipboard)
 
 CheckSum Tool 0.3.0 - 2008-01-07 (r107)
   Manual: Add initial version of user manual (in html format)
